system/staging/istio-ingress/gateway.enc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: ingress-gateway
spec:
    selector:
        istio: ingress
    servers:
        - port:
            number: 80
            name: http
            protocol: HTTP
          hosts:
            - ENC[AES256_GCM,data:7rX3tW0QgfwRME3T3rnAdmQ=,iv:iCyPzFty8d2AymgNkPcnUCqqTZErsOn6PvFbn7q1HNg=,tag:AfRdc9FlVttI2bIrhIz/3w==,type:str]
          tls:
            httpsRedirect: true
        - port:
            number: 443
            name: https
            protocol: HTTPS
          hosts:
            - ENC[AES256_GCM,data:NWC5ARZdDwJdXn27bRSGF3o=,iv:Y6ObLLDSfpDZxsWR0BW4sgin17SHcgeInz31BHVdxBE=,tag:jc+EhnE+ySu6ACgWLS1IXg==,type:str]
          tls:
            mode: SIMPLE
            credentialName: ingress-cert
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2022-12-18T00:20:00Z"
    mac: ENC[AES256_GCM,data:3khe5EM/DW+gQn7Atv0hQHorLBeIynkyAkh1T5cETjMxkcdIgIezVF6dwiIqt++QSCJvqKw4b3FNE/5RrJEaXWepaqZ1gJn4gZ9dQZtdZ+kFsPIr9PlAIG9bdB/dP2xfVCEhJ4pSMtQ90XKWAK9CTJ0I7LS+fmD/FHL/1PrOItA=,iv:TjIr5BCJdmbDjPKjiMHbBagqWxIfUl3RqsDqwE4cgA4=,tag:xpj+aROfXVW3WtLJhXRs9w==,type:str]
    pgp:
        - created_at: "2022-12-18T00:19:59Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA38T7Az157GMAQ//eMaBF41DE/nbTl02FgrtG5oc8D/lgzuyj7q0dc51yice
[...]
            =hQ1g
            -----END PGP MESSAGE-----
          fp: 129994A38E40322EE2A4FA6CB59C51DA13B1BF22
    encrypted_regex: ^(client-secret|clientID|subscriptionID|tenantID|resourceGroupName|hostedZoneName|email|commonName|dnsNames|hosts)$
    version: 3.7.3
