system/staging/istio-ingress/authorizationpolicy.enc.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
    name: ingress-auth-policy
spec:
    selector:
        matchLabels:
            istio: ingress
    action: CUSTOM
    provider:
        name: oauth2-proxy
    rules:
        - to:
            - operation:
                hosts:
                    - ENC[AES256_GCM,data:n/Z2DUDpPkkvvZkrqK4VO5o=,iv:UA7j/p6e/Ono3RlLp3+o0W2b+Sc4E8+CF7txYzIibhs=,tag:AZTDKL2SI/RTpOe+7BiDqg==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2022-12-18T02:29:40Z"
    mac: ENC[AES256_GCM,data:TAwuRk8JtAPeiDB5NduT/GjMxz2qH2i4/u3DywmvrGaj/lb9AueGDnpYPt2vpseXeLRAZwSlmKrsRn+lFwgNzmILFZBpN12wOcRTwR/MrZArF6tQZ+ZrOsW8yUYFlITcxZ7G2FCLOr/N6sXKyQ/mKH+PKdGXh4nGp0GXQBrtzkY=,iv:huLG/NGYwHUQfYbBii6HYvgMQWhqT8IjDPzm+UiLvUs=,tag:JmrcBdhY8MPEaiQe4AMxQw==,type:str]
    pgp:
        - created_at: "2022-12-18T02:29:39Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA38T7Az157GMAQ//RBABZrCKGndEE382WO3qRs3yMyQtdLep2Im8/JMCw9pw
[...]
            =IwnY
            -----END PGP MESSAGE-----
          fp: 129994A38E40322EE2A4FA6CB59C51DA13B1BF22
    encrypted_regex: ^(client-secret|clientID|subscriptionID|tenantID|resourceGroupName|hostedZoneName|email|commonName|dnsNames|hosts)$
    version: 3.7.3
